<resources>
    <string name="app_name">Prayers Times</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sunrise">Sunrise</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="explore_qiblah">Explore Qiblah</string>
    <string name="isha">Isha</string>
</resources>