<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardCornerRadius="0dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_fajr"
                    style="@style/TextStylePrayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fajr" />

                <TextView
                    android:id="@+id/text_fajr_time"
                    style="@style/TextStylePrayerTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="11:04" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_sunrise"
                    style="@style/TextStylePrayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sunrise" />

                <TextView
                    android:id="@+id/text_sunrise_time"
                    style="@style/TextStylePrayerTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="11:04" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_dhuhr"
                    style="@style/TextStylePrayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dhuhr" />

                <TextView
                    android:id="@+id/text_dhuhr_time"
                    style="@style/TextStylePrayerTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="11:04" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_asr"
                    style="@style/TextStylePrayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/asr" />

                <TextView
                    android:id="@+id/text_asr_time"
                    style="@style/TextStylePrayerTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="11:04" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_maghrib"
                    style="@style/TextStylePrayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/maghrib" />

                <TextView
                    android:id="@+id/text_maghrib_time"
                    style="@style/TextStylePrayerTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="11:04" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_isha"
                    style="@style/TextStylePrayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Isha" />

                <TextView
                    android:id="@+id/text_isha_time"
                    style="@style/TextStylePrayerTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="11:04" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>