<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PrayerTime">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_64"
            android:fontFamily="sans-serif-medium"
            android:text="Till Fajr"
            android:textColor="@color/white"
            android:textSize="@dimen/text_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            tools:text="04:43 10"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/spacing_32"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:cardCornerRadius="radius_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/text_heading"
                    tools:text="Location" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_32"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_fajr"
                        style="@style/TextStylePrayerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fajr" />

                    <TextView
                        android:id="@+id/text_fajr_time"
                        style="@style/TextStylePrayerTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="11:04" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_20"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_sunrise"
                        style="@style/TextStylePrayerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sunrise" />

                    <TextView
                        android:id="@+id/text_sunrise_time"
                        style="@style/TextStylePrayerTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="11:04" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_20"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_dhuhr"
                        style="@style/TextStylePrayerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dhuhr" />

                    <TextView
                        android:id="@+id/text_dhuhr_time"
                        style="@style/TextStylePrayerTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="11:04" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_20"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_asr"
                        style="@style/TextStylePrayerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/asr" />

                    <TextView
                        android:id="@+id/text_asr_time"
                        style="@style/TextStylePrayerTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="11:04" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_20"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_maghrib"
                        style="@style/TextStylePrayerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/maghrib" />

                    <TextView
                        android:id="@+id/text_maghrib_time"
                        style="@style/TextStylePrayerTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="11:04" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_20"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_isha"
                        style="@style/TextStylePrayerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Isha" />

                    <TextView
                        android:id="@+id/text_isha_time"
                        style="@style/TextStylePrayerTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="11:04" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="Explore Qubla"
            app:cornerRadius="@dimen/radius_12"
            android:layout_marginTop="@dimen/spacing_48"
            android:textSize="@dimen/text_body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>